<resources>
    <string name="app_name">LocalizacionTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Nueva nota</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="new_task">Nueva tarea</string>
    <string name="add">Agregar</string>
    <string name="date_created">Creado el %s</string>
    <string name="asds">sdfsd</string>
    <string name="date_format">"dd/MM/yyyy"</string>
    <string name="coordinates">Coordenadas: </string>
    <string name="coordinates_value">%s,%s</string>
    <string name="speed">Velocidad:</string>
    <string name="kmHr"> %s Km/h</string>
    <string name="permission_needed">Es necesario dar permisos de ubicación</string>
    <string name="traveling">En trayecto</string>
    <string name="start_service">Iniciando servicio</string>
    <string name="end_service">Terminando servicio</string>
    <string name="missing_information">Falta información</string>


</resources>